# pbcli

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: lints.yml  main.yml
src/: api.rs  config.rs  crypto.rs  error.rs  lib.rs  logger.rs  main.rs  opts.rs  privatebin.rs  uniffi_custom_types.rs  util.rs
tests/: macros.rs  smoke.rs  util.rs
