[package]
name = "pbcli"
description = """
pbcli is a command line client which allows to upload and download
pastes from privatebin directly from the command line.
"""
version = "2.3.1"
authors = ["Mydayyy"]
edition = "2021"
documentation = "https://github.com/Mydayyy/pbcli"
homepage = "https://github.com/Mydayyy/pbcli"
repository = "https://github.com/Mydayyy/pbcli"
keywords = ["privatebin", "pastebin", "pasteservice"]
categories = ["command-line-utilities"]
license = "Unlicense OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-rc.1", features = ["derive"] }
reqwest = { version = "0.12.3", features = ["blocking", "json"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.115"
serde_with = "3.7.0"
miniz_oxide = "0.7.2"
ring = "0.17.8"
aes-gcm = { version = "0.9.4", features = ["aes"] }
bs58 = "0.5.1"
base64 = "0.22.0"
typenum = "1.14.0"
hex-literal = "0.4.1"
pbkdf2 = "0.12.2"
rand_core = { version = "0.6.3", features = ["std"] }
crypto-mac = "0.11.1"
hmac = "0.12.1"
sha2 = "0.10.8"
url = { version = "2.2.2", features = ["serde"] }
atty = "0.2.14"
rand_chacha = "0.3.1"
dialoguer = "0.9.0"
data-url = "0.3.1"
mime_guess = "2.0.3"
terminal_size = "0.3.0"
parse-size = {version = "1.0.0", features = ["std"]}
