[package]
name = "pbcli"
description = """
pbcli is a command line client which allows to upload and download
pastes from privatebin directly from the command line.
"""
version = "2.6.0"
authors = ["Mydayyy"]
edition = "2021"
documentation = "https://github.com/Mydayyy/pbcli"
homepage = "https://github.com/Mydayyy/pbcli"
repository = "https://github.com/Mydayyy/pbcli"
keywords = ["privatebin", "pastebin", "pasteservice"]
categories = ["command-line-utilities"]
license = "Unlicense OR MIT"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "pbcli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-rc.1", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.69"
serde_with = "1"
miniz_oxide = "0.5.0"
ring = "0.16"
aes-gcm = { version = "0.9.4", features = ["aes"] }
bs58 = "0.4.0"
base64 = "0.13"
typenum = "1.14.0"
hex-literal = "0.3.3"
pbkdf2 = "0.9.0"
rand_core = { version = "0.6.3", features = ["std"] }
crypto-mac = "0.11.1"
hmac = "0.11.0"
sha2 = "0.9.8"
url = { version = "2.2.2", features = ["serde"] }
rand_chacha = "0.3.1"
dialoguer = "0.9.0"
data-url = "0.1.1"
mime_guess = "2.0.3"
terminal_size = "0.1.17"
parse-size = { version = "1.0.0", features = ["std"] }
uniffi = { version = "0.28.0", optional = true, features = ["cli"] }
openssl = { version = "0.10", features = ["vendored"] }
directories = "5.0.1"
log = "0.4.22"
scraper = "0.21.0"
